2012-02-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-19
	* Update load_configuration procedure and SQL definitions to take into account module 
	  reference operators inside Sequences.
	* Modify psSelectSequenceEntries statement.

2012-02-19 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-18 put operator(IGNORE,NEGATE) also for modules inside
	* sequences (so far only for modules directly in a path)
	* - still needs DB intervention

2012-02-11 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-17 Improve migration

2012-02-10 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-15/16
	* Extension of menu-diff: use the result of the diff between two
	  configuration as a patch to modify a third configuration,
	  resulting in a patched, fourth configuration.
	  Only added or changed paths, but not deleted paths, are
	  updated (deep update, ie, including changed sequences
	  and modules)

2012-02-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-14
	* Add "Assign path to a primary dataset" option attached to each path (bug/feature 82526).
	* Add "Remove path from a primary dataset" option attached to each path (bug/feature 82526).
	* Add "Assign path to a primary dataset" option in Stream menu for each path.
	* Add "Remove path from P.dataset" option in Stream menu for each path. 
	
2012-02-08 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-13
	* Smarter parameter updating when replacing module

2012-02-07 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-12
	* Extend search&replace to plugin type (for normal modules only)
	* tag V01-06-09/10/11
	* Extend module replacement to copys of modules or new instances

2012-02-03 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-08
	* Add/remove path to/from a primary dataset using Drag&Drop method (bug/feature 82526).

2012-02-02 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-07